--- a/web/templates/sel_skin_col.html
+++ b/web/templates/sel_skin_col.html
@@ -28,18 +28,8 @@ ValoVault - Adicionar Coleção
                     <option value="{{ b[0] }}">{{ b[1] }}</option>
                 {% endfor %}
             </select>
-            <button type="submit" class="btn btn-success">Selecionar skin</button>
+            <button type="submit" class="btn btn-dark">Selecionar skin</button>
         </form>
-        <br>
-        <form>
-            <select class="form-select form-select-sm" aria-label=".form-select-sm example" disabled>
-                <option selected>Selecione a arma</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-            </select>
-        </form>
-
     </div>
 
 
