--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -13,9 +13,11 @@ ValoVault
 
     <div class="container">
         <div class="text-center">
+            <img src="static/Valorant.png" class="img-fluid">
+            <br><br>
             <p class="h1">ValoVault</p>
             <br>
-            <p class="h5">ValoVault é um gerenciador de skins de Valorant onde pode adicionar skins à sua coleção. Pode também criar uma wishlist com as skins que pretende obter futuramente.</p>
+            <p class="h5">ValoVault é um gerenciador de skins de Valorant. Pode adicionar e remover skins à sua coleção. Também é possível criar uma wishlist.</p>
         </div>
     </div>
 
