--- a/web/templates/colecao.html
+++ b/web/templates/colecao.html
@@ -2,7 +2,7 @@
 
 {% block title %} 
 
-ValoVault - Coleção
+Coleção - ValoVault
 
 {% endblock %}
 
@@ -35,12 +35,17 @@ ValoVault - Coleção
         <div class="container">
             {% for a in colecao %}
                 <p class="h3">{{ a }}</p>
-                <ul>
+                <div class="row">
                     {% for t in colecao[a] %}
-                        <li class="h5">{{ t[1] }} <a href="{{ url_for('rem_col', id=t[0]) }}" type="button" class="btn btn-danger btn-sm">Remover Skin</a></li>
-                        <!--<p>ID: {{ t[0] }}</p>-->
+                        <div class="col">
+                            <a href="{{ url_for('pag_skin', nome=t[1]) }}">
+                                <img src="static/{{ a }}/{{ t[1] }}.png" class="img-thumbnail">
+                            </a>
+                            <p class="h5">{{ t[1] }}</p>
+                            <a href="{{ url_for('rem_col', id=t[0]) }}" type="button" class="btn btn-danger btn-sm">Remover Skin</a>
+                        </div>
                     {% endfor %}
-                </ul>
+                </div>
                 <hr>
                 <br><br>
 
