--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -26,10 +26,10 @@ Home - ValoVault
     <div class="container">
         <div class="row">
             <div class="col text-center">
-                <a type="button" class="btn btn-dark btn-lg" href="{{ url_for('colecao') }}">Coleção</a>
+                <a type="button" class="btn btn-dark btn-lg" href="{{ url_for('colecao') }}">Ver Coleção</a>
             </div>
             <div class="col text-center">
-                <a type="button" class="btn btn-dark btn-lg" href="{{ url_for('wishlist') }}">Wishlist</a>
+                <a type="button" class="btn btn-dark btn-lg" href="{{ url_for('wishlist') }}">Ver Wishlist</a>
             </div>
         </div>  
     </div>
