--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <title>{% block title %} {% endblock %}</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="/static/estilos.css">
     </head>
 
     <body>
@@ -28,10 +27,9 @@
                         </li>
                     </ul>
                 </div>
-                <!--<form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
-                    <button class="btn btn-outline-light" type="submit">Pesquisar</button>
-                </form>-->
+                <audio id="music" autoplay controls loop>
+                        
+                </audio>
             </div>
         </nav>
 
@@ -42,6 +40,18 @@
         </main>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script type="text/javascript">
+            function addAudio() {
+                fileArray = ["Valorant Menu Ep1.mp3", "Valorant Breeze.mp3", "Zedd X Valorant Spectrum.mp3"]
+                var num = Math.floor(Math.random() * fileArray.length);
+                var x = document.getElementById("music");
+                x.innerHTML = "";
+                x.innerHTML += '<source src="/static/Music/' + fileArray[num] + '" type="audio/mp3">';
+                x.volume = 0.3;
+                x.play(); 
+            }
 
+            addAudio();
+        </script>
     </body>
 </html>
