--- a/web/templates/sel_skin_col.html
+++ b/web/templates/sel_skin_col.html
@@ -22,15 +22,14 @@ ValoVault - Adicionar Coleção
     <div class="container">
 
         <form method="post" action="{{ url_for('sel_skin_col') }}">
-            <select id="skin" name="skin" class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
-                <option selected>Selecione a skin</option>
+            <select id="skin" name="skin" class="form-select form-select-lg mb-3" aria-label=".form-select-lg example" required>
+                <option selected value="">Selecione a skin</option>
                 {% for b in bundles %}
                     <option value="{{ b[0] }}">{{ b[1] }}</option>
                 {% endfor %}
             </select>
-            <button type="submit" class="btn btn-dark">Selecionar skin</button>
+            <button type="submit" class="btn btn-dark">Selecionar</button>
         </form>
     </div>
-
 
 {% endblock %}
